--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -46,6 +46,13 @@ jobs:
           return $?
         }
 
+        # Function to check if URL exists with auth
+        check_url_with_auth() {
+          AUTH_STRING=$(echo -n "${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}" | base64)
+          curl --head --silent --fail -H "Authorization: Basic ${AUTH_STRING}" "$1" > /dev/null
+          return $?
+        }
+
         # Wait for preview URL to be available (up to 60 minutes)
         echo "Waiting for preview site to become available ..."
         for i in {1..60}; do
@@ -68,8 +75,14 @@ jobs:
           echo "Error: Sitemap does not exist at $PREVIEW_URL/sitemap.xml"
           exit 1
         fi
+
+        # Check if installation page is accessible with auth
+        if ! check_url_with_auth "$PREVIEW_URL/installation/index.html"; then
+          echo "Error: Installation page is not accessible with authentication at $PREVIEW_URL/installation/index.html"
+          exit 1
+        fi
         
-        echo "Preview URL and sitemap exist."
+        echo "Preview URL, sitemap, and passwword-protected installation page exist."
         echo "preview_exists=true" >> $GITHUB_OUTPUT
 
     - name: Install Lighthouse CI
