--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -48,19 +48,10 @@ jobs:
 
         # Function to check if URL exists with auth
         check_url_with_auth() {
-          # Extract the path from the URL
-          path=$(echo "$1" | sed "s|$PREVIEW_URL||")
-          echo "Debug: Original URL: $1"
-          echo "Debug: Extracted path: $path"
-          
-          # Construct URL with embedded credentials using the full preview URL
-          base_url=$(echo "$PREVIEW_URL" | sed -E 's|^https?://|https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@|')
-          auth_url="${base_url}${path}"
-          echo "Debug: Auth URL (credentials hidden): https://***:***@docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}$path"
-          
-          # Use -v for verbose output to see the full request/response
-          echo "Debug: Running curl with verbose output..."
-          curl -v --head --silent --fail "$auth_url" 2>&1 | grep -E "^(<|>|HTTP/)"
+          # Add credentials to the URL
+          auth_url=$(echo "$1" | sed -E "s|https://|https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@|")
+          echo "Debug: Checking URL with auth (credentials hidden): https://***:***@$(echo "$1" | sed -E 's|^https?://||')"
+          curl --head --silent --fail "$auth_url" > /dev/null
           return $?
         }
 
