--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -70,15 +70,15 @@ jobs:
         fi
 
         # Check if installation page is accessible with auth
-        auth_url=$(echo "$PREVIEW_URL/installation/index.html" | sed -E "s|https://|https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@|")
-        echo "Debug: Checking URL with auth (credentials hidden): https://***:***@$(echo "$PREVIEW_URL/installation/index.html" | sed -E 's|^https?://||')"
-        echo "Debug: Running curl with verbose output..."
-        if ! curl -v --head --silent --fail "$auth_url" 2>&1 | grep -E "^(<|>|HTTP/)"; then
+        echo "Debug: Checking installation page with Basic Auth..."
+        if ! curl -v --head --silent --fail \
+          -u "${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}" \
+          "$PREVIEW_URL/installation/index.html" 2>&1; then
           echo "Error: Installation page is not accessible with authentication at $PREVIEW_URL/installation/index.html"
           exit 1
         fi
+        echo "Info: Successfully accessed password-protected installation page"
         
-        echo "Preview URL, sitemap, and password-protected installation page exist."
         echo "preview_exists=true" >> $GITHUB_OUTPUT
 
     - name: Install Lighthouse CI
