--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -70,11 +70,10 @@ jobs:
         fi
 
         # Check if installation page is accessible with auth
-        echo "Debug: Checking installation page with Basic Auth..."
-        if ! curl -v --head --silent --fail \
-          -u "${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}" \
-          "$PREVIEW_URL/installation/index.html" 2>&1; then
-          echo "Error: Installation page is not accessible with authentication at $PREVIEW_URL/installation/index.html"
+        echo "Debug: Checking installation page with URL-based auth..."
+        auth_url="https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/installation/index.html"
+        if ! curl -v --head --silent --fail "$auth_url" 2>&1; then
+          echo "Error: Installation page is not accessible with authentication at $auth_url"
           exit 1
         fi
         echo "Info: Successfully accessed password-protected installation page"
