--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -72,7 +72,7 @@ jobs:
         # Check if installation page is accessible with auth
         echo "Debug: Checking installation page with URL-based auth..."
         auth_url="https://${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}@docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/installation/index.html"
-        if ! curl -v --head --silent --fail "$auth_url" 2>&1; then
+        if ! curl -v --head --silent --fail --anyauth "$auth_url" 2>&1; then
           echo "Error: Installation page is not accessible with authentication at $auth_url"
           exit 1
         fi
@@ -89,19 +89,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
-
-    - name: Create auth headers file
-      if: steps.check_preview.outputs.preview_exists == 'true'
-      run: |
-        # Create base64 encoded auth string
-        AUTH_STRING=$(echo -n "${{ secrets.INSTALLATION_USER }}:${{ secrets.INSTALLATION_PW }}" | base64)
-        
-        # Create auth headers JSON file
-        cat > auth-headers.json << EOF
-        {
-          "Authorization": "Basic ${AUTH_STRING}"
-        }
-        EOF
 
     - name: Generate URLs to check
       if: steps.check_preview.outputs.preview_exists == 'true'
@@ -132,9 +119,9 @@ jobs:
         ]
 
         def get_auth_headers():
-            # Read auth headers from file
-            with open('auth-headers.json', 'r') as f:
-                return json.load(f)
+            # Create auth headers from environment variables
+            auth_string = base64.b64encode(f"{os.environ['INSTALLATION_USER']}:{os.environ['INSTALLATION_PW']}".encode()).decode()
+            return {"Authorization": f"Basic {auth_string}"}
 
         def get_url_depth(url):
             # Parse the URL to get just the path
@@ -322,7 +309,6 @@ jobs:
       run: |
         cat > .lighthouserc.js << 'EOF'
         const fs = require('fs');
-        const authHeaders = JSON.parse(fs.readFileSync('auth-headers.json', 'utf-8'));
         const urls = fs.readFileSync('lhci-urls.txt', 'utf-8').split('\n').filter(Boolean);
         
         module.exports = {
@@ -331,7 +317,6 @@ jobs:
               url: urls,
               numberOfRuns: 1,
               settings: {
-                extraHeaders: authHeaders,
                 formFactor: 'desktop',
                 screenEmulation: {
                   mobile: false,
