--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -11,7 +11,7 @@ env:
   # 1 — All first-level subdirectories (e.g. /guide/*.html)
   # 2 — All second-level subdirectories (e.g. /guide/attestation/*.html)
   # Note: While the crawler technically supports deeper levels, expect the workflow to take >2-12 hours to complete
-  DEFAULT_DEPTH: '1'
+  DEFAULT_DEPTH: '0'
 
 permissions:
   issues: write
@@ -472,11 +472,26 @@ jobs:
             lighthouseComment = `⚠️ WARN: Average accessibility score is **${lighthouseScore}** (required: >0.9) — [Check the workflow run](${lighthouseReportUrl})`;
           }
 
-          // Generate scores table from manifest
+          const stripAuth = url => {
+            try {
+              const u = new URL(url);
+              u.username = '';
+              u.password = '';
+              return u.toString();
+            } catch {
+              return url;
+            }
+          };
+
+          // Use the artifact URL as the report link for each row
+          const reportUrl = lighthouseArtifactUrl || lighthouseReportUrl;
+
           const scoresTable = manifestJson
             .map(run => {
               const formatScore = (score) => score === null ? 'N/A' : score.toFixed(2);
-              return `| ${run.url.replace(baseUrl, '')} | ${formatScore(run.summary.accessibility)} | ${formatScore(run.summary.performance)} | ${formatScore(run.summary['best-practices'])} | ${formatScore(run.summary.seo)} |`;
+              // Display the path only, without credentials, and link to the report
+              const displayPath = stripAuth(run.url).replace(baseUrl, '');
+              return `| [${displayPath}](${reportUrl}) | ${formatScore(run.summary.accessibility)} | ${formatScore(run.summary.performance)} | ${formatScore(run.summary['best-practices'])} | ${formatScore(run.summary.seo)} |`;
             })
             .join('\n');
 
