PR preview for installation-docs-testing-fixes branch

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -23,6 +23,7 @@ jobs:
         repository: validmind/installation
         path: site/_source/installation
         token: ${{ secrets.INSTALLATION_RO_PAT }}
+        ref: installation-docs-testing-fixes
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v5
