Update permissions for workflow

--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -3,8 +3,11 @@ name: Lighthouse check
 on:
   pull_request:
     types: [opened, synchronize, ready_for_review]
-  workflow_dispatch:
 
+permissions:
+  issues: write
+  pull-requests: write
+  
 env:
   # To change the default depth level:
   # 0 — Top-level navigation only (e.g. /index.html, /guide/guides.html, /developer/validmind-library.html, etc.)
