Add Lighthouse and Vale to CI checks (#716)
* Add initial Lighthouse, and Vale checks

* Add Vale config file, update readme

* More Vale config shenanigans

* Yet more Vale fun

* Switch vale sync to install

* Increase Ligthouse level to 1

* Add mkdir step

* Update readme again, bump lighthose to depth 2

* Fix .vale.ini and sync packages

* Simplify Vale workflow after package install

* Bump down Lighthouse depth to 1

* Fix JSON output for Vale

* Switch to environment variable for depth

* Work around comment lenght limit for Vale

* Add debug info for sitemap URL

* Bump up Vale linter to post the first 30 files and ignore *.yml

* Simplify Vale linter message

* Experiment with new Lighthouse depth var

* Simplify Vale message yet again

* Add debug info to sitemap generation step

* Move sitemap generation into Makefile and add as post-render step

* Improve check for preview URL & sitemap

* Add wait loop for preview site

* Fix timestamp issue for GitHub

* Undo make get-source

* Fix Lighthouse URL list logic, again

* Better debug for URL list, update readme

* Yet mode debugging for URL list

* Update get_url_depth logic to omit the slashes in the base URL

* We have another bug

* Try to fix get_urls_from_sitemap

* Reduce debug clutter

* Uncomment print statement

* Fix HEAD issue in path in URL list

* More logic fixed

* Switch to simpler logic for depth and root pages

* Try depth level 1

* Switch back to depth 0

* Switch back to depth 1 and attempt to fix path issue

* Attempt to fix HEAD in URL issue, again

* Try fixing branch for post-render step again, revert to depth 0 for now

* Try fixing PR branch error

* Try Makefile to get the PR branch again

* Attempt to fetch branch in workflow, again

* feat: repair helm chart conflicts

* Also update Makefile

* Remove some debug info

* Undo unrelated changes

* Undo newline for validate docs site workflow

* Attempt to fetch the branch name on GitHub again

* Progress but still not quite th

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -46,7 +46,6 @@ jobs:
           cat render_errors.log;
           exit 1;
           }
-
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
     - name: Filter changed files
@@ -102,7 +101,7 @@ jobs:
           echo "No warnings or errors detected during Quarto render"
         fi
 
-      # Demo bucket is in us-east-1
+    # Demo bucket is in us-east-1
     - name: Configure AWS credentials
       run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set default.region us-east-1
 
@@ -113,10 +112,31 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          const url = `https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/index.html`;
+          const previewUrl = `https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/index.html`;
+          
+          // Delete old preview comments
+          const { data: comments } = await github.rest.issues.listComments({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+          });
+          
+          for (const comment of comments) {
+            if (comment.user.login === 'github-actions[bot]' && comment.body.includes('## Validate docs site')) {
+              await github.rest.issues.deleteComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: comment.id,
+              });
+            }
+          }
+          
+          let comment = `## Validate docs site\n\n`;
+          comment += `✓ INFO: A live preview of the docs site is available — [Open the preview](${previewUrl})\n\n`;
+
           github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number,
-            body: `A PR preview is available: [Preview URL](${url})`
+            body: comment
           });
