Copy over files from Beck's PR 638

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: website
-  post-render: make generate-sitemap
+  # post-render: make generate-sitemap
 
 metadata-files:
   - developer/_sidebar.yaml
@@ -184,21 +184,26 @@ website:
         - text: "Get Started"
           file: get-started/get-started.qmd
         - text: "---"
-        - text: "QuickStart — 15 Minutes"
-          file: get-started/quickstart.qmd
-        - text: "---"
-        - text: "{{< var validmind.developer >}}"
-        - get-started/developer/try-with-jupyterhub.qmd
-        - get-started/developer/try-with-colab.qmd
-        - get-started/developer/try-in-your-own-environment.qmd
-        - text: "---"
-        - text: "{{< var validmind.platform >}}"
-        - get-started/platform/explore-sample-model-documentation.qmd
-        - get-started/platform/register-your-first-model.qmd
-        - get-started/platform/generate-documentation-for-your-model.qmd
+        - text: "QuickStart"
+        - text: "Model Development"
+          file: get-started/quickstart-administrator.qmd
+        - text: "Model Validation"
+          file: get-started/quickstart-administrator.qmd
+        - text: "Setup & Administration"
+          file: get-started/quickstart-validator.qmd
+        # - text: "---"
+        # - text: "{{< var validmind.developer >}}"
+        # - get-started/developer/try-with-jupyterhub.qmd
+        # - get-started/developer/try-with-colab.qmd
+        # - get-started/developer/try-in-your-own-environment.qmd
+        # - text: "---"
+        # - text: "{{< var validmind.platform >}}"
+        # - get-started/platform/explore-sample-model-documentation.qmd
+        # - get-started/platform/register-your-first-model.qmd
+        # - get-started/platform/generate-documentation-for-your-model.qmd
 #        - text: "Join Our Community" 
 #         file: guide/join-community.qmd
-        - get-started/platform/next-steps.qmd
+        # - get-started/platform/next-steps.qmd
 
     - title: "Guides"
       contents:
