notebooks: Pulling in new Quickstart for model validation notebook (#731)
* Latest notebooks from beck/sc-10339/create-code-samples-notebook-quickstart-for

* Linking new validation quickstart

* New notebook edits

* More updates

* Pulled in the changes from VAlidmind-library

---------

Co-authored-by: Lois Ansah <loiscodes@gmail.com>

--- a/site/developer/_sidebar.yaml
+++ b/site/developer/_sidebar.yaml
@@ -8,8 +8,9 @@ website:
           file: developer/validmind-library.qmd
         - developer/supported-models.qmd
         - text: "---"
-        - text: "QuickStart"
+        - text: "Quickstart"
         - notebooks/quickstart/quickstart_model_documentation.ipynb
+        - notebooks/quickstart/quickstart_model_validation.ipynb
         - text: "Install and initialize ValidMind Library"
           file: developer/model-documentation/install-and-initialize-validmind-library.qmd
         - developer/model-documentation/store-credentials-in-env-file.qmd
