get-started/_sidebar.yaml

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -3,6 +3,7 @@ project:
   post-render: make generate-sitemap
 
 metadata-files:
+  - get-started/_sidebar.yaml
   - developer/_sidebar.yaml
   - training/_sidebar.yaml
   - validmind/_sidebar.yml
@@ -182,27 +183,6 @@ website:
         - about/fine-print/data-privacy-policy.qmd
         - text: "Software license agreement"
           file: about/fine-print/license-agreement.qmd
-
-    - title: "Get Started"
-      contents:
-        - text: "Get Started"
-          file: get-started/get-started.qmd
-        - text: "---"
-        - text: "QuickStart — 15 Minutes"
-          file: get-started/quickstart.qmd
-        - text: "---"
-        - text: "{{< var validmind.developer >}}"
-        - get-started/developer/try-with-jupyterhub.qmd
-        - get-started/developer/try-with-colab.qmd
-        - get-started/developer/try-in-your-own-environment.qmd
-        - text: "---"
-        - text: "{{< var validmind.platform >}}"
-        - get-started/platform/explore-sample-model-documentation.qmd
-        - get-started/platform/register-your-first-model.qmd
-        - get-started/platform/generate-documentation-for-your-model.qmd
-#        - text: "Join Our Community" 
-#         file: guide/join-community.qmd
-        - get-started/platform/next-steps.qmd
 
     - title: "Guides"
       contents:
