--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -372,16 +372,16 @@ website:
         #   contents:
         #     - internal/footnotes/hover-only.qmd
 
-  page-footer:
-    background: "#26818B"
-    left: 
-      - text: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
-    center: 
-      - text: "Platform"
-      - text: "Solutions"
-      - text: "Community"
-      - text: "Resources"
-      - text: "Company"
+    page-footer: false
+    # background: "#26818B"
+    # left: 
+    #   - text: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
+    # center: 
+    #   - text: "Platform"
+    #   - text: "Solutions"
+    #   - text: "Community"
+    #   - text: "Resources"
+    #   - text: "Company"
     # right:
     #   - text: "validmind.com {{< fa external-link >}}"
     #     href: https://validmind.com/
