--- a/site/_extensions/nrichers/slideover/_extension.yml
+++ b/site/_extensions/nrichers/slideover/_extension.yml
@@ -1,6 +1,6 @@
 title: Reveal.js Slideover
 author: Nik Richers
-version: 1.1.0
+version: 1.3.1
 quarto-required: ">=1.6.0"
 contributes:
   revealjs-plugins:
@@ -8,4 +8,5 @@ contributes:
       script:
         - slideover.js
       stylesheet:
-        - slideover.css 
+        - slideover.css
+        - custom-slideover.css
