--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -15,9 +15,9 @@ website:
     position: above-navbar 
   favicon: validmind.png
   title: "ValidMind"
-  cookie-consent:
-    type: express
-    style: simple
+  # cookie-consent:
+  #   type: express
+  #   style: simple
   google-analytics: 
     tracking-id: "G-S46CKWPNSS"
     anonymize-ip: true
