--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -15,9 +15,9 @@ website:
     position: above-navbar 
   favicon: validmind.png
   title: "ValidMind"
-  # cookie-consent:
-  #   type: express
-  #   style: simple
+  cookie-consent:
+    type: express
+    style: simple
   google-analytics: 
     tracking-id: "G-S46CKWPNSS"
     anonymize-ip: true
@@ -372,28 +372,28 @@ website:
         #   contents:
         #     - internal/footnotes/hover-only.qmd
 
-    page-footer: false
-    # background: "#26818B"
-    # left: 
-    #   - text: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
-    # center: 
-    #   - text: "Platform"
-    #   - text: "Solutions"
-    #   - text: "Community"
-    #   - text: "Resources"
-    #   - text: "Company"
-    # right:
-    #   - text: "validmind.com {{< fa external-link >}}"
-    #     href: https://validmind.com/
-    #     target: _blank
-    #   - text: "Privacy Policy"
-    #     href: https://validmind.com/about/legal/privacy-policy/
-    #   - text: "Terms of Use"
-    #     href: https://validmind.com/about/legal/terms-of-use/
-    #   - icon: github
-    #     href: https://github.com/validmind/documentation
-    #   - icon: linkedin
-    #     href: https://www.linkedin.com/company/validmind/
+    # page-footer: 
+    #   background: "#26818B"
+    #   left: 
+    #     - text: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
+    #   center: 
+    #     - text: "Platform"
+    #     - text: "Solutions"
+    #     - text: "Community"
+    #     - text: "Resources"
+    #     - text: "Company"
+    #   right:
+    #     - text: "validmind.com {{< fa external-link >}}"
+    #       href: https://validmind.com/
+    #       target: _blank
+    #     - text: "Privacy Policy"
+    #       href: https://validmind.com/about/legal/privacy-policy/
+    #     - text: "Terms of Use"
+    #       href: https://validmind.com/about/legal/terms-of-use/
+    #     - icon: github
+    #       href: https://github.com/validmind/documentation
+    #     - icon: linkedin
+    #       href: https://www.linkedin.com/company/validmind/
 
 format:
   html:
