--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -372,17 +372,55 @@ website:
           contents:
             - internal/footnotes/hover-only.qmd
 
-  page-footer: 
-      background: "#26818B"
-      left: 
-        - text: "© Copyright {{< now year >}} {{< var validmind.legal >}}  All Rights Reserved."
-      center: 
-        - text: "**Platform**  \n[Platform Overview](/platform/overview)  \n[Request a Demo](/platform/demo)"
-        - text: "**Solutions**  \n[Solutions Overview](/solutions/overview)  \n[AI Models](/solutions/ai)  \n[Statistical & Traditional Models](/solutions/statistical)  \n[Generative AI Models](/solutions/generative)  \n[Advantage Partner Ecosystem](/solutions/partners)"
-        - text: "**Community**  \n[Solutions Overview](/community/overview)  \n[AI Models](/community/ai)  \n[Statistical & Traditional Models](/community/statistical)  \n[Generative AI Models](/community/generative)  \n[Advantage Partner Ecosystem](/community/partners)"
-        - text: "**Resources**  \n[Blog](/blog)  \n[Events](/events)  \n[Technical Briefs](/briefs)  \n[Webinars](/webinars)  \n[Legal](/legal)"
-        - text: "**Company**  \n[About Us](/about)  \n[News](/news)  \n[Careers](/careers)  \n[Contact](/contact)"
+  page-footer:
+    background: "#26818B"
+    left: 
+      - text: | 
+          <img src="/homepage_docsite/ValidMind%20MASTER%20Brand%20Assets_Logo-White%20R%202.svg" width="140" style="margin-bottom: 10px;"><br>
+          <div style="margin-bottom: 10px;">
+            <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
+            <img src="/homepage_docsite/Ellipse%201.svg" width="30" style="margin-right: 2px;">
+            <img src="/homepage_docsite/Ellipse%201.svg" width="30">
+          </div>
+          © Copyright {{< now year >}} ValidMind Inc.<br>
+          All Rights Reserved.<br>
+          <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
+    center:
+      - text: |
+          <strong>Platform</strong><br>
+          <a href="/platform/overview">Platform Overview</a><br>
+          <a href="/platform/demo">Request a Demo</a>
 
+      - text: |
+          <strong>Solutions</strong><br>
+          <a href="/solutions/overview">Solutions Overview</a><br>
+          <a href="/solutions/ai">AI Models</a><br>
+          <a href="/solutions/statistical">Statistical & Traditional Models</a><br>
+          <a href="/solutions/generative">Generative AI Models</a><br>
+          <a href="/solutions/partners">Advantage Partner Ecosystem</a>
+
+      - text: |
+          <strong>Community</strong><br>
+          <a href="/community/overview">Solutions Overview</a><br>
+          <a href="/community/ai">AI Models</a><br>
+          <a href="/community/statistical">Statistical & Traditional Models</a><br>
+          <a href="/community/generative">Generative AI Models</a><br>
+          <a href="/community/partners">Advantage Partner Ecosystem</a>
+
+      - text: |
+          <strong>Resources</strong><br>
+          <a href="/blog">Blog</a><br>
+          <a href="/events">Events</a><br>
+          <a href="/briefs">Technical Briefs</a><br>
+          <a href="/webinars">Webinars</a><br>
+          <a href="/legal">Legal</a>
+
+      - text: |
+          <strong>Company</strong><br>
+          <a href="/about">About Us</a><br>
+          <a href="/news">News</a><br>
+          <a href="/careers">Careers</a><br>
+          <a href="/contact">Contact</a>
 format:
  html:
    grid:
