--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: website
-  # post-render: make generate-sitemap
+  post-render: make generate-sitemap
 
 metadata-files:
   - developer/_sidebar.yaml
@@ -34,50 +34,6 @@ website:
     title: false
     pinned: true
 
-    # left:
-    #   - text: "About"
-    #     file: about/overview.qmd
-    #   - text: "Get Started"
-    #     file: get-started/get-started.qmd
-    #   - text: "Guides"
-    #     file: guide/guides.qmd
-    #   - text: "{{< fa cube >}} {{< var validmind.developer >}}"
-    #     menu:
-    #     - text: "{{< fa laptop-code >}} {{< var validmind.developer >}}"
-    #       file: developer/validmind-library.qmd
-    #     - text: "{{< fa cubes >}} Supported Models"
-    #       file: developer/supported-models.qmd
-    #     - text: "{{< fa rocket >}} Documentation QuickStart"
-    #       file: notebooks/quickstart/quickstart_model_documentation.ipynb
-    #     - text: "---"
-    #     - text:  "{{< fa vial >}} TESTING"
-    #     - text: "{{< fa flask-vial >}} Run Tests & Test Suites"
-    #       file: developer/model-testing/testing-overview.qmd
-    #     - text: "{{< fa microscope >}} Test Descriptions"
-    #       file: developer/model-testing/test-descriptions.qmd
-    #     - text: "{{< fa toolbox >}} Test Sandbox (BETA)"
-    #       file: developer/model-testing/test-sandbox.qmd
-    #     - text: "---"
-    #     - text: "{{< fa code >}} CODE SAMPLES"
-    #     - text: "{{< fa book-open-reader >}} All Code Samples · `LLM` · `NLP` · `Time Series` · `Etc.`"
-    #       file: developer/samples-jupyter-notebooks.qmd
-    #     - text: "{{< fa download >}} Download Code Samples · `notebooks.zip`"
-    #       file: notebooks.zip
-    #     - text: "{{< fa hand-point-right >}} Try it on JupyterHub {{< fa hand-point-left >}}"
-    #       file: https://jupyterhub.validmind.ai/
-    #     - text: "---"
-    #     - text: "{{< fa book >}} REFERENCE"
-    #     - text: "{{< var validmind.api >}}"
-    #       file: validmind/validmind.qmd
-    #   - text: "Support"
-    #     file: support/support.qmd
-    #   - text: "Training"
-    #     file: training/training.qmd
-    #   - text: "Releases"
-    #     file: releases/all-releases.qmd
-    #   - text: "validmind.com {{< fa external-link >}}"
-    #     file: https://validmind.com/
-    #     target: _blank
     right:
       # - text: "{{< fa cube >}} Documentation"
       #   file: about/overview.qmd
@@ -387,40 +343,46 @@ website:
           <a href="/privacy">Privacy Policy</a>  <a href="/terms">Terms of Services</a>
     center:
       - text: |
+          <div class="footer-column">
           <strong>Platform</strong><br>
           <a href="/platform/overview">Platform Overview</a><br>
           <a href="/platform/demo">Request a Demo</a>
-
+          </div>
       - text: |
+          <div class="footer-column">
           <strong>Solutions</strong><br>
           <a href="/solutions/overview">Solutions Overview</a><br>
           <a href="/solutions/ai">AI Models</a><br>
           <a href="/solutions/statistical">Statistical & Traditional Models</a><br>
           <a href="/solutions/generative">Generative AI Models</a><br>
           <a href="/solutions/partners">Advantage Partner Ecosystem</a>
-
+          </div>
       - text: |
+          <div class="footer-column">
           <strong>Community</strong><br>
           <a href="/community/overview">Solutions Overview</a><br>
           <a href="/community/ai">AI Models</a><br>
           <a href="/community/statistical">Statistical & Traditional Models</a><br>
           <a href="/community/generative">Generative AI Models</a><br>
           <a href="/community/partners">Advantage Partner Ecosystem</a>
-
+          </div>
       - text: |
+          <div class="footer-column">
           <strong>Resources</strong><br>
           <a href="/blog">Blog</a><br>
           <a href="/events">Events</a><br>
           <a href="/briefs">Technical Briefs</a><br>
           <a href="/webinars">Webinars</a><br>
           <a href="/legal">Legal</a>
-
+          </div>  
       - text: |
+          <div class="footer-column">
           <strong>Company</strong><br>
           <a href="/about">About Us</a><br>
           <a href="/news">News</a><br>
           <a href="/careers">Careers</a><br>
           <a href="/contact">Contact</a>
+          </div>
 format:
  html:
    grid:
