--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -12,7 +12,7 @@ metadata-files:
 
 website:
   announcement: 
-    content: "[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use" 
+    content: '[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use'
     position: above-navbar 
   favicon: validmind.png
   title: "ValidMind"
@@ -161,35 +161,6 @@ website:
         - text: "Software license agreement"
           file: about/fine-print/license-agreement.qmd
 
-<<<<<<< HEAD
-    - title: "Get Started"
-      contents:
-        - text: "Get Started"
-          file: get-started/get-started.qmd
-        - text: "---"
-        - text: "QuickStart"
-        - text: "Model Development"
-          file: get-started/quickstart-administrator.qmd
-        - text: "Model Validation"
-          file: get-started/quickstart-administrator.qmd
-        - text: "Setup & Administration"
-          file: get-started/quickstart-validator.qmd
-        - text: "---"
-        - text: "{{< var validmind.developer >}}"
-        - get-started/developer/try-with-jupyterhub.qmd
-        - get-started/developer/try-with-colab.qmd
-        - get-started/developer/try-in-your-own-environment.qmd
-        - text: "---"
-        - text: "{{< var validmind.platform >}}"
-        - get-started/platform/explore-sample-model-documentation.qmd
-        - get-started/platform/register-your-first-model.qmd
-        - get-started/platform/generate-documentation-for-your-model.qmd
-        # - text: "Join Our Community" 
-        #   file: guide/join-community.qmd
-        - get-started/platform/next-steps.qmd
-
-=======
->>>>>>> origin/main
     - title: "Guides"
       contents:
         - guide/guides.qmd
